bpy.ops.render.opengl() gobbles up Python console output #29878

Closed
opened 2012-01-13 14:56:53 +01:00 by Paul Melis · 3 comments

%%%This with r43168 (post 2.6.1), on an Ubuntu 10.04.3 x86_64 system.

When using bpy.ops.render.render() in the Python console, I get a return value as expected and the console produces the expected output:

print('STARTING'); bpy.ops.render.render(write_still=True); print('DONE')

STARTING
{'FINISHED'}
DONE

But when rendering an opengl preview I get:

print('STARTING'); bpy.ops.render.opengl(write_still=True); print('DONE')

I.e. no new line is printed, no return value and the two print()s produce no output. Even though the render() command produces a file result, console output seems to be disabled for the whole statement line.

When doing the same from a Text window the commands DO produce output (on the terminal).

Sure, minor problem, but still a bug :)%%%

%%%This with r43168 (post 2.6.1), on an Ubuntu 10.04.3 x86_64 system. When using bpy.ops.render.render() in the Python console, I get a return value as expected and the console produces the expected output: >>> print('STARTING'); bpy.ops.render.render(write_still=True); print('DONE') STARTING {'FINISHED'} DONE >>> But when rendering an opengl preview I get: >>> print('STARTING'); bpy.ops.render.opengl(write_still=True); print('DONE') I.e. no new line is printed, no return value and the two print()s produce no output. Even though the render() command produces a file result, console output seems to be disabled for the whole statement line. When doing the same from a Text window the commands DO produce output (on the terminal). Sure, minor problem, but still a bug :)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#29878
No description provided.