Fix #29878: running bpy.ops.render.opengl() from console not starting new line or printing output.